# Cpp_Programs

./: .gitignore  .gitmodules  Cpp_Workspace.code-workspace  Practice.cpp  README.md  temp.cmake  temp.cpp  temp.ui  template.cpp
Coherent/: Test_TEXT.cpp
Companies/Ronna/: CMakeLists.txt  Logger.cpp
Companies/Ronna/Development/: Leds_handling-Old_OpState.cpp  PACS.cpp  dicomdir.cpp
Companies/Ronna/Diagrams/Component_diagrams/: rtkalgorithm_lib.puml  rtkcommon_lib.puml  rtkcommunication_lib.puml  rtkcontrol_app.puml  rtkplanning_app.puml  rtksimulation_lib.puml
Companies/Ronna/Diagrams/MindMaps/: rtkalgorithm.puml  rtkcommon.puml  rtkcommunication.puml  rtkcontrol.puml  rtkcontrol_with_submodules.puml  rtkdata.puml  rtkelements.puml  rtkmobile.puml  rtkplanning.puml  rtksimulation.puml
Companies/Ronna/GTK/: G_DEFINE_TYPE.cpp  MVC_pattern_example.cpp  rtk_gobject.cpp
Companies/Ronna/SQLite/: schema.cpp  schema.sql  schema.sqlite
Companies/Tradeweb_Markets/: CMakeLists.txt
Companies/Tradeweb_Markets/include/: OrderCache.h  OrderCache2.h
Companies/Tradeweb_Markets/scripts/: conf.sh  run.sh
Companies/Tradeweb_Markets/source/: OrderCache.cpp  OrderCache2.cpp
Companies/Tradeweb_Markets/tests/: OrderCacheTest.cpp
Design_Patterns/Additional/01_singleton_pattern/: CMakeLists.txt  README.md  Singleton.md  main.cpp
Design_Patterns/Additional/01_singleton_pattern/UML/: Singleton_Pattern.puml
Design_Patterns/Additional/01_singleton_pattern/inc/: HardwareManager.h
Design_Patterns/Additional/01_singleton_pattern/scripts/: build.sh  conf.sh  run.sh
Design_Patterns/Head_First-Design_Patterns/02_weather_monitoring_application/: CMakeLists.txt  Observer_Pattern.md  README.md  main.cpp
Design_Patterns/Head_First-Design_Patterns/02_weather_monitoring_application/UML/: Bad_Tightly_Coupled_Design.puml  Observer_Pattern.puml  diagram.puml
Design_Patterns/Head_First-Design_Patterns/02_weather_monitoring_application/inc/: CurrentConditionsDisplay.h  DisplayElement.h  Observer.h  Subject.h  WeatherData.h
Design_Patterns/Head_First-Design_Patterns/02_weather_monitoring_application/scripts/: all.sh  run.sh
Design_Patterns/Head_First-Design_Patterns/03_starbuzz_coffee/: CMakeLists.txt  Decorator_Pattern.md  README.md  main.cpp
Design_Patterns/Head_First-Design_Patterns/03_starbuzz_coffee/UML/: Bad_Boolean_Flags_Design.puml  Decorator_Pattern.puml  diagram.puml
Design_Patterns/Head_First-Design_Patterns/03_starbuzz_coffee/inc/: Beverage.h  CondimentDecorator.h  DarkRoast.h  Decaf.h  Espresso.h  HouseBlend.h  Mocha.h  Soy.h  Whip.h
Design_Patterns/Head_First-Design_Patterns/03_starbuzz_coffee/scripts/: all.sh  run.sh
Design_Patterns/Head_First-Design_Patterns/06_home_automation/: CMakeLists.txt  Command_Pattern.md  README.md  main.cpp
Design_Patterns/Head_First-Design_Patterns/06_home_automation/UML/: Bad_Tight_Coupling.puml  Command_Pattern.puml  diagram.puml
Design_Patterns/Head_First-Design_Patterns/06_home_automation/inc/: Command.h  Light.h  LightOffCommand.h  LightOnCommand.h  MacroCommand.h  NoCommand.h  RemoteControl.h  Stereo.h  StereoOffCommand.h  StereoOnWithCDCommand.h
Design_Patterns/Head_First-Design_Patterns/06_home_automation/scripts/: all.sh  run.sh
Design_Patterns/Head_First-Design_Patterns/11_iterator_pattern/: CMakeLists.txt  Iterator_and_Composite_Pattern.md  README.md  main.cpp
Design_Patterns/Head_First-Design_Patterns/11_iterator_pattern/UML/: Bad_Direct_Collection_Exposure.puml  Bad_Mixed_Leaf_Composite.puml  Composite_Pattern.puml  Iterator_Pattern.puml  composite_pattern.puml  iterator_pattern.puml
Design_Patterns/Head_First-Design_Patterns/11_iterator_pattern/inc/: CafeMenu.h  CompositeMenu.h  CompositeMenuItem.h  CompositeWaitress.h  DinerMenu.h  Iterator.h  Menu.h  MenuComponent.h  MenuItem.h  PancakeHouseMenu.h  Waitress.h
Design_Patterns/Head_First-Design_Patterns/11_iterator_pattern/scripts/: all.sh  build.sh  conf.sh  run.sh
Design_Patterns/Head_First-Design_Patterns/12_gumball_machine/: CMakeLists.txt  README.md  State_Pattern.md  main.cpp
Design_Patterns/Head_First-Design_Patterns/12_gumball_machine/UML/: Bad_Conditional_State_Machine.puml  State_Pattern.puml  diagram.puml
Design_Patterns/Head_First-Design_Patterns/12_gumball_machine/inc/: GumballMachine.h  HasQuarterState.h  NoQuarterState.h  SoldOutState.h  SoldState.h  State.h  WinnerState.h
Design_Patterns/Head_First-Design_Patterns/12_gumball_machine/scripts/: all.sh  build.sh  conf.sh  run.sh
Design_Patterns/Observer_Pattern/Examples/Multiple_observers/: CMakeLists.txt
GoogleTest/GoogleTest-With_CMake/: CMakeLists.txt  Example.cpp  Example.hpp  build.sh  run.sh
GoogleTest/GoogleTest-With_CMake/test/: CMakeLists.txt  ExampleTests.cpp
Makefile/CMake/Add_data_from_cmake_to_exe/: CMakeLists.txt  main.cpp
Makefile/CMake/Add_data_from_cmake_to_exe/scripts/: conf.sh  run.sh
Makefile/CMake/Executable_libraries_and_include/: CMakeLists.txt  Create_executable.md  Include_directories.md  main.cpp
Makefile/CMake/Executable_libraries_and_include/Point3d/: CMakeLists.txt  Point3d.cpp  Point3d.hpp
Makefile/CMake/Executable_libraries_and_include/Vector3d/: CMakeLists.txt  Vector3d.cpp  Vector3d.hpp
Makefile/CMake/Executable_libraries_and_include/scripts/: conf.sh  run.sh
Makefile/CMake/Multiple_classes_and_friend/: CMakeLists.txt  conf.sh  main.cpp  run.sh
Makefile/CMake/Multiple_classes_and_friend/Point3d/: CMakeLists.txt  Point3d.cpp  Point3d.hpp
Makefile/CMake/Multiple_classes_and_friend/Vector3d/: CMakeLists.txt  Vector3d.hpp
Makefile/CMake/Tutorial_with_glfw_library/: CMakeLists.txt  conf.sh  main.cpp  run.sh
Makefile_practice/CMake/: CMakeLists.txt  build.sh  conf.sh  main.cpp  readme.md  run.sh
Makefile_practice/CMake/Adder/: CMakeLists.txt
Miscellaneous/Logging/Boost/: CMakeLists.txt
Miscellaneous/Logging/spdlog/: CMakeLists.txt
Personal_projects/USB_input/UsbManager/: CMakeLists.txt
Personal_projects/USB_input/libusb_examples/: CMakeLists.txt  Determine_usb_type.cpp  Device_desc.cpp  MultiThr.cpp  listdevs.c
(+1229 files in other folders)
